--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remo Ryser's GitHub Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #D3E1A3; /* Light green */
+            color: #333; /* Dark gray */
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #255F36; /* Dark green */
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+        footer {
+            background-color: #255F36; /* Dark green */
+            color: #fff; /* White */
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+        }
+        footer p {
+            margin: 0;
+            font-size: 0.8em;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Welcome to Remo Ryser's GitHub Homepage</h1>
+        <p>This is a simple GitHub homepage with an ecological theme.</p>
+        <p>Feel free to explore!</p>
+    </div>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Remo Ryser | All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
