--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div class="container">
         <h1>Welcome to Remo Ryser's GitHub Homepage</h1>
+	<p>Feel free to explore!</p>
         <p>This is a simple GitHub homepage with an ecological theme.</p>
         <p>Feel free to explore!</p>
     </div>
