--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Contact Remo Ryser</h1>
-        <p>Here are my contacts</p>
+        <p>Here are my contacts: </p>
     </div>
 </body>
 </html>
