--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researcher Introduction</title>
+    <title>Contact Remo Ryser</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            background-color: #D3E1A3; /* Light green */
+            color: #333; /* Dark gray */
             margin: 0;
             padding: 0;
         }
@@ -19,9 +19,9 @@
             text-align: center;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin-bottom: 20px;
-            color: #007bff;
+            color: #255F36; /* Dark green */
         }
         p {
             font-size: 1.2em;
@@ -33,7 +33,10 @@
 <body>
     <div class="container">
         <h1>Contact Remo Ryser</h1>
-        <p>Here are my contacts: </p>
+        <p>Feel free to reach out to me using the following contacts:</p>
+        <p>Email: </p>
+        <p>Phone: +1234567890</p>
+        <p>Address: the woods</p>
     </div>
 </body>
 </html>
