--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researcher Introduction</title>
+    <title>My Projects</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            background-color: #D3E1A3; /* Light green */
+            color: #333; /* Dark gray */
             margin: 0;
             padding: 0;
         }
@@ -19,9 +19,9 @@
             text-align: center;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin-bottom: 20px;
-            color: #007bff;
+            color: #255F36; /* Dark green */
         }
         p {
             font-size: 1.2em;
@@ -32,8 +32,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>My projects</h1>
-        <p>These are current projects:.</p>
+        <h1>My Projects</h1>
+        <p>Here are some of my current projects:</p>
+        <ul>
+            <li>Project 1: Description of Project 1</li>
+            <li>Project 2: Description of Project 2</li>
+            <li>Project 3: Description of Project 3</li>
+            <!-- Add more projects as needed -->
+        </ul>
     </div>
 </body>
 </html>
