--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researcher Introduction</title>
+    <title>About Remo Ryser</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            background-color: #D3E1A3; /* Light green */
+            color: #333; /* Dark gray */
             margin: 0;
             padding: 0;
         }
@@ -19,9 +19,9 @@
             text-align: center;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin-bottom: 20px;
-            color: #007bff;
+            color: #255F36; /* Dark green */
         }
         p {
             font-size: 1.2em;
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Meet Remo Ryser</h1>
+        <h1>About Remo Ryser</h1>
         <p>Hi there! I'm Remo Ryser.</p>
     </div>
 </body>
