--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,24 @@
             line-height: 1.6;
             margin-bottom: 20px;
         }
+        .buttons-container {
+            position: fixed;
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+        }
+        .buttons-container a {
+            display: block;
+            margin-bottom: 10px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #255F36; /* Dark green */
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
+        .buttons-container a:hover {
+            background-color: #1D472A; /* Darker green on hover */
+        }
     </style>
 </head>
 <body>
@@ -37,6 +55,11 @@
         <p>Email: </p>
         <p>Phone: +1234567890</p>
         <p>Address: the woods</p>
+    </div>
+    <div class="buttons-container">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
     </div>
 </body>
 </html>
