--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
 <body>
     <div class="container">
         <h1>About Remo Ryser</h1>
+        <img class="about-image" src="images/remo-ryser.jpg" alt="Remo Ryser" width="300">
         <p>Hi there! I'm Remo Ryser.</p>
     </div>
     <div class="buttons-container">
