--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container2">
         <h1>About Remo Ryser</h1>
-        <img class="about-image" src="images/remo-ryser.jpg" alt="Remo Ryser" width="300">
+        <img class="about-image" src="images/remo-ryser.jpg" alt="Remo Ryser" width="500">
         <p>Hi there! I'm Remo.</p>
         <p>I am an ecologist that has fallen in love with theory.</p>
         <p>During my undergraduats I conducted extensive fieldwork at night to understand how artificial light at night affects plant-pollinator networs. I was quickly fascinated networks and their structures. Later, while doing an internship at the natural history museum where I worked on modelling phylogenetic trees based on molecular and morphological information, I gathered my first experiences with bioinformatic tools and computational biology.</p>
