--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,8 @@
     <div class="container">
         <h1>Contact Remo Ryser</h1>
         <p>Feel free to reach out to me using the following contacts:</p>
-        <p>Email: </p>
-        <p>Phone: +1234567890</p>
-        <p>Address: the woods</p>
+        <p>Email: remo.ryser88@gmail.com</p>
+
     </div>
     <nav>
         <ul>
