--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Contact Remo Ryser</h1>
         <p>Feel free to reach out to me using the following contacts:</p>
-        <p>Email: remo.ryser88@gmail.com</p>
+        <p>Email: remo.ryser88 [at] gmail.com</p>
 
     </div>
     <nav>
