--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <h1>About Remo Ryser</h1>
         <img class="about-image" src="images/remo-ryser.jpg" alt="Remo Ryser" width="500">
         <p>Hi there! I'm Remo.</p>
-        <p>I am an ecologist that has fallen in love with theory.</p>
+        <p>I am an ecologist that has fallen in love with theory and I am currently starting my own group.</p>
         <p>During my undergraduats I conducted extensive fieldwork at night to understand how artificial light at night affects plant-pollinator networs. I was quickly fascinated networks and their structures. Later, while doing an internship at the natural history museum where I worked on modelling phylogenetic trees based on molecular and morphological information, I gathered my first experiences with bioinformatic tools and computational biology.</p>
         <p>I then moved to Leipzig where I did my PhD at <a href="https://www.idiv.de/de/index.html">iDiv</a> under the supervision of Uli Brose. There I extended a bioenergetic food-web model into space by incorporating spatialy explicit landscapes of patches connected by species-specific dispersal. In computer simulations I then used this model to explore how habitat isolation, patch sizes and distributions and landscape heterogeneity drive the persistence of species and the stability of (meta-) food webs. In the following postdoc I delved deeper into questions about food-web assembly, the interface between ecological and economic models in fisheries, spatial scales and processes and artificial light at night. My interest in understanding fundamental mechanisms that govern biodiversity and ecological processes and patterns is something all these questions have in common.</p>
         <p>Despite my love for theory, I remain and ecologist at heart and am fascinated by nature. This includes astronomy and physics, and foremoste, being in and enjoying nature. Nothing makes me feel more free than swimming in the river or hiking or skiing in the mountains.</p>
@@ -39,7 +39,8 @@
     <nav>
         <ul>
             <li><a id="home" href="index.html">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
+            <li><a id="about" href="about.html">About Remo</a></li>
+            <li><a id="people" href="people.html">People</a></li>
             <li><a id="projects" href="projects.html">Projects</a></li>
             <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
