--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remo Ryser's GitHub Homepage</title>
+    <title>some cool lab name</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 
 </head>
 <body>
     <nav>
         <ul>
-            <li><a id="home" href="index.html" class="active">Home</a></li>
-            <li><a id="about" href="about.html">About</a></li>
+            <li><a id="about" href="about.html">About Remo</a></li>
+            <li><a id="people" href="people.html">People</a></li>
             <li><a id="projects" href="projects.html">Projects</a></li>
             <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
-        <h1>Welcome to Remo Ryser's GitHub Homepage</h1>
+        <h1>Welcome to [some cool lab name]</h1>
 
-
-        
+        <h2>This homepage aims to provide an overview of the people in the lab and the research we are conducting.</h2>
+        <p>We are broadly interested in biodiversity, ecosystems and ecological networks and how they work. We primarily use theoretical tool such as math and computer simulations to gain a general understanding of mechanisms that shape biodiversity and ecosystem functions - fundamentally and in response to perturbations and global change.</p>
+            
+    <h1> This website is still under construction! </h1>
     </div>
     <footer>
         <div class="container">
