--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>Welcome to the ENMoLab - Ecological Networks and Modelling Lab</h1>
+        <h1>Welcome to the Ecological Networks and Modelling Lab (ENMo Lab) lead by Remo Ryser</h1>
 
         <h2>This homepage aims to provide an overview of the people in the lab and the research we are conducting.</h2>
         <p>We are broadly interested in biodiversity, ecosystems and ecological networks and how they work. We primarily use theoretical tool such as math and computer simulations to gain a general understanding of mechanisms that shape biodiversity and ecosystem functions - fundamentally and in response to perturbations and global change.</p>
