--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
             <h4>In colaboration with EcoNetLab and iDiv</h4>
             
             <h2>sMars - Synthesis of Movement Across Scales (<a href="https://www.idiv.de/en/smars.html">an sDiv funded research group</a>):</h2>
-            <img class="project-image" src="images/sMArs.jpg" alt="sMars working group" width="500">
+            <img class="project-image" src="images/sMars.jpg" alt="sMars working group" width="500">
             <p>Movement is the key process driving species interactions, community composition, and ultimately biodiversity patterns across scales. However, the geographic scale of biodiversity research does not necessarily match the scale at which animals move and interact. Thus, we are developing an empirically informed unified concept of spatial scale that accounts for the differences in how species experience their spatial environment. Furthermore, we are compiling a general movement database and are developing a mechanistic dispersal model based on energy budgets and metabolism.</p>
             <h4>Researchers: Remo Ryser</h4>
             <h4>In colaboration with Myriam Hirt</h4>
