--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a id="about" href="about.html">About Remo</a></li>
-            <li><a id="people" href="people.html">People</a></li>
+            <li><a id="people" href="people.html">Team</a></li>
             <li><a id="projects" href="projects.html">Projects</a></li>
             <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
@@ -20,7 +20,7 @@
         <h1>Welcome to Remo's homepage</h1>
 
         <h2>This homepage aims to provide an overview of the people in the lab and the research we are conducting.</h2>
-        <p>We are broadly interested in biodiversity, ecosystems and ecological networks and how they work. We primarily use theoretical tool such as math and computer simulations to gain a general understanding of mechanisms that shape biodiversity and ecosystem functions - fundamentally and in response to perturbations and global change.</p>
+        <p>We are broadly interested in biodiversity, ecosystems and ecological networks and how they work. We primarily use theoretical tool such as maths and computer simulations to gain a general understanding of mechanisms that shape ecolocigal patterns, relationships and functions across spatial scales - fundamentally and in response to perturbations and global change.</p>
             
     <h1> This website is still under construction! </h1>
     </div>
