--- a/people.html
+++ b/people.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>People</title>
+    <title>Team</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 
 </head>
@@ -12,26 +12,26 @@
         <ul>
             <li><a id="home" href="index.html">Home</a></li>
             <li><a id="about" href="about.html">About Remo</a></li>
-            <li><a id="people" href="people.html">People</a></li>
+            <li><a id="people" href="people.html">Team</a></li>
             <li><a id="projects" href="projects.html">Projects</a></li>
             <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
-        <h1>People</h1>
+        <h1>Team</h1>
 
 
     
     </div>
-    <!--
+
     <div class="container2">
         <ul>
             <h3>Leonardo Espinosa</h3>
             <h2>PhD student</h2>
-            <img class="about-image" src="images/mountains.jpg" alt="Mountains in the Swiss Alps" width="600">
+            <img class="about-image" src="images/Leo.jpg" alt="Leonardo Espinosa" width="600">
             <p>Description</p>
 
-            
+            <!--
             <h3>NameName</h3>
             <h2>Master student</h2>
             <img class="about-image" src="images/mountains.jpg" alt="Mountains in the Swiss Alps" width="600">
