--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a id="home" href="index.html">Home</a></li>
             <li><a id="about" href="about.html">About Remo</a></li>
-            <li><a id="people" href="people.html">People</a></li>
+            <li><a id="people" href="people.html">Team</a></li>
             <li><a id="projects" href="projects.html">Projects</a></li>
             <li><a id="contact" href="contact.html">Contact</a></li>
         </ul>
