--- a/people.html
+++ b/people.html
@@ -29,7 +29,9 @@
             <h3>Leonardo Espinosa</h3>
             <h2>PhD student</h2>
             <img class="about-image" src="images/Leo.jpg" alt="Leonardo Espinosa" width="600">
-            <p>Description</p>
+            <p>I am a PhD student investigating the context-dependency of biodiversity-ecosystem functioning (BEF) relationships, focusing on how the structure of multi-trophic networks and eutrophication shape these relationships. My project aims to identify the mechanisms driving BEF variability by combining empirical data from grassland experiments with theoretical modeling approaches.
+            My research explores the role of multi-trophic networks in BEF relationships. I aim to develop a trait-based plant-herbivore interaction model to predict network structures and examine how these structures influence ecosystem functions such as productivity and herbivory rates. I will also investigate how eutrophication interacts with network structure to drive BEF relationships. I will analyze how nutrient enrichment and functional plant compositions affect network dynamics and extinction risks, by integrating empirical data from the PaNDiv experiment with bioenergetic food-web models.
+            Through my PhD, I aim to identify mechanisms that help apply BEF insights to real-world ecosystems and improve our understanding of biodiversity's role in ecosystem functioning.</p>
 
             <!--
             <h3>NameName</h3>
