--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container2">
                 <h2>News</h2>
 
-                <p>Test</p>
+                <p>Our thematic session on Dynamical Ecological Networks: connecting topics and approaches form the BES2024 meeting:</p>
 
                
                <iframe width="560" height="315" src="https://www.youtube.com/embed/HXFYJvMHO1k?list=WL" title="BES2024 Thematic Session - Dynamical Ecological Networks: connecting topics and approaches" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
